--- a/module5/ss6/Json/package.json
+++ b/module5/ss6/Json/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.13.2",
     "bootstrap": "5.2",
     "formik": "^2.4.9",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
