--- a/module5/ss6/Json/package.json
+++ b/module5/ss6/Json/package.json
@@ -17,9 +17,11 @@
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.10.0",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
